<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homewrk_edit"
    android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar_first"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_baseline_menu_24">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_school_24"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Paatham Public School"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_baseline_person_24"
                android:layout_marginEnd="20dp"
                tools:ignore="RtlHardcoded"
                />
        </androidx.appcompat.widget.Toolbar>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout33"
            android:id="@+id/scroll"
            >
    <LinearLayout
        android:id="@+id/layout33"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_text"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/toolbar_first"
            android:gravity="center_horizontal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
           >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Homework : Add / Edit"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginLeft="10dp"
            android:padding="3dp"
            android:textFontWeight="700"

          />
        </FrameLayout></LinearLayout>

<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/toolbar_first"
    android:layout_marginRight="7dp"
    android:layout_marginLeft="7dp"


    />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="15dp"
            app:cardCornerRadius="10dp"
            android:backgroundTint="@color/white"


            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_marginRight="10dp"


                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sec2"
                    android:textColor="@color/black"

                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border"
                    android:layout_marginTop="2dp"

                    />
            </LinearLayout>


<!--            double-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="55dp"
                    android:weightSum="2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:padding="2dp"

                            >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sec3"
                        android:textFontWeight="700"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/edit_text_border"
                       />
            </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="2dp"
                        android:layout_marginRight="10dp"
                        >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sec4" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/edit_text_border"

                       />
                </LinearLayout>
                </LinearLayout>

            <!--            double-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="110dp"
                android:weightSum="2"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="2dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sec5" />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_border"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="2dp"
                    android:layout_marginRight="10dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sec6" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_border"
                        />
                </LinearLayout>
            </LinearLayout>


            <!--            double-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="165dp"
                android:weightSum="2"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="2dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sec7" />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_border"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="2dp"
                    android:layout_marginRight="10dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sec8" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_border"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="220dp"
                android:layout_marginLeft="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sec9"
                    android:textColor="@color/black"
                    android:layout_marginLeft="2dp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border"
                    android:padding="6dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="20dp"

                    />
            </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="280dp"
    android:orientation="horizontal"
    android:weightSum="3"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="10dp"
    >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Attachments : "
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="7dp"
        >
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="27dp"
                    android:textColor="#FFFFFF"
                    android:text="Browse files"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:background="@drawable/gradient"
                    android:gravity="center_horizontal" /></LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Upload File"
        android:textColor="#7C7777"
        android:layout_marginLeft="10dp"

        />

</LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="335dp"
                android:layout_marginBottom="10dp"

                >
                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="27dp"
                    android:layout_weight="1"
                  android:gravity="right"
                    android:layout_marginRight="20dp"

                    >
                    <TextView
                        android:text="Submit"
                        android:textColor="#5CE44C"
                        android:textSize="15sp"

                        android:background="@drawable/submitborder"
                        android:layout_height="match_parent"
                        android:layout_width="110dp"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:padding="2dp"


                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="27dp"
                    android:gravity="left"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:text="Cancel"
                        android:textColor="#CD0826"
                        android:textSize="15sp"
                        android:background="@drawable/cancel_border"
                        android:layout_height="match_parent"
                        android:layout_width="110dp"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:padding="2dp"


                        />
                </LinearLayout>


            </LinearLayout>




        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"

            />

</LinearLayout>

</ScrollView>



    <!--    end-->


</LinearLayout>
